Agregado agencia Danli

--- a/danli.html
+++ b/danli.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MI PYME FINANCIERO</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <title>Danli</title>
+    <link rel="stylesheet" href="CSS/danli.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -57,7 +57,7 @@
             </div>
         </div>
             <div class="texto-principal">
-                <h1>BIENVENIDO A MI PYME FINANCIERO </h1>
+                <h1>BIENVENIDO AGENCIA DANLÍ</h1>
                 <h2 class="creciendo">¡CRECIENDO JUNTOS!</h2>
             </div>
             <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
@@ -90,37 +90,16 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>
                     <a href="#">Leer más...</a>
                 </article>
-                <article class="article">
-                    <img src="img/Equipo3.jpg" alt="">
-                    <h3>13 de abril del 2024</h3>
-                    <h2>compromiso</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolorum unde facilis asperiores, commodi itaque veritatis deserunt. Quia enim fugit iusto, harum non nostrum doloremque porro laudantium quasi unde odit.</p>
-                    <a href="#">Leer más...</a>
-                </article>
-                <nav class="navegacion">
-                    <a href="#">Inicio</a>
-                    <a href="#">1</a>
-                    <a href="#">2</a>
-                    <a href="#">3</a>
-                    <a href="#">4</a>
-                    <a href="#">Final</a>
-                </nav>
+                
             </div>
-            <aside class="aside">
-                <div class="publicidad">
-                    <h4>Contrataciones</h4>
-                    <img src="img/contrataciones.jpeg" alt="">
-                </div>
-                <div class="publicidad">
-                    <h4>Agencias</h4>
-                    <img src="img/sedes.jpg" alt="">
-                </div>
-                <div class="publicidad">
-                    <h4>Valores</h4>
-                    <img src="img/publicidad1.jpg" alt="">
-                </div>
-            </aside>
+           
         </section>
+        <Section>
+            <iframe class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9930.423643116555!2d-86.57438558171032!3d14.028651516367113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6e682d6789a60b%3A0x74cdede2bb676116!2zRGFubMOtLCBFbCBQYXJhw61zbw!5e0!3m2!1ses-419!2shn!4v1713471153047!5m2!1ses-419!2shn"
+                width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </Section>
     <section class="ola2">
         <div class="wave2" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-4.22,76.48 C149.99,150.00 271.49,-49.98 505.92,74.52 L500.00,0.00 L0.00,0.00 Z" style="stroke: none; fill: rgb(255, 255, 255);"></path></svg>
         </div>
@@ -128,7 +107,7 @@
             <!--CREACION DEL FOOTER-->
     <footer class="footer container">
         <div class="links">
-            <h4>Sobre Nosotros</h4>
+            <h4>Danli</h4>
             <ul>
                 <li class="fas fa-arrow-right"><p>“Somos una empresa responsable, que se dedica a impulsar el crecimiento sostenible de las pequeñas empresas" </p></li>
             </ul>
