Nueva modificacion del footer

--- a/danli.html
+++ b/danli.html
@@ -82,52 +82,53 @@
                 </div>
                 <div class="slider-img">
                     <img src="img/Compañeros/2-17.jpg" alt="2">
-                    <h2>Lic. Donal</h2>
+                    <h2>Lic. Darwin</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
+                        <h3>contador</h3>
                         <p>Licenciado en</p>
                     </div>
                 </div>
                 <div class="slider-img">
                     <img src="img/Compañeros/2-29.jpg" alt="3">
-                    <h2>Lic. Donal</h2>
+                    <h2>Lic. Felipe</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
+                        <h3>Contador</h3>
                         <p>Licenciado en</p>
                     </div>
                 </div>
                 <div class="slider-img active">
-                    <img src="img/Compañeros/2-3.jpg" alt="4">
+                    <img src="img/S4.jpg" alt="4">
                     <h2>Lic. Donal</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
-                        <p>Licenciado en</p>
+                        <h3 class="h3don">Amahel</h3>
+                        <p class="parra">Licenciado en</p>
                     </div>
                 </div>
                 <div class="slider-img">
                     <img src="img/Compañeros/2-31.jpg" alt="5">
-                    <h2>Lic. Donal</h2>
+                    <h2>Lic. Brasly</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
+                        <h3>Analista informatico</h3>
                         <p>Licenciado en</p>
                     </div>
                 </div>
                 <div class="slider-img">
                     <img src="img/Compañeros/2-35.jpg" alt="6">
-                    <h2>Lic. Donal</h2>
+                    <h2>Lic. Armando</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
+                        <h3>Soporte </h3>
                         <p>Licenciado en</p>
                     </div>
                 </div>
                 <div class="slider-img">
-                    <img src="img/Compañeros/2-7.jpg" alt="7">
-                    <h2>Lic. Donal</h2>
+                    <img src="img/Compañeros/2-17.jpg" alt="7">
+                    <h2>Lic. Darwin</h2>
                     <div class="details">
-                        <h3>Amahel</h3>
+                        <h3>contador</h3>
                         <p>Licenciado en</p>
                     </div>
                 </div>
+                
             </div>
         </section>
 
