Agregado seccion novedades y Equipo

--- a/Siguatepeque.html
+++ b/Siguatepeque.html
@@ -50,8 +50,8 @@
                                 <li><a href="Comayagua.html">Comayagua</a></li>
                                 <li><a href="Siguatepeque.html">Siguatepeque</a></li>
                                 <li><a href="Intibuca.html">Intibucá</a></li>
-                                <li><a href="#">El Paraíso</a></li>
-                                <li><a href="#">Santa Rosa De Copán</a></li>
+                                <li><a href="ElParaiso.html">El Paraíso</a></li>
+                                <li><a href="SantaRosa.html">Santa Rosa De Copán</a></li>
                             </ul>
                         </li>
                         <li><a href="Contactos.html">Contacto </a></li>
@@ -163,7 +163,7 @@
 
       <section class="container2">
         <div class="map">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1ZK8aHJAQzBfL0C9Wpx0ITVr_A2W3LOs&ehbc=2E312F&noprof=1" width="600" height="480"></iframe>
+          <iframe src="https://www.google.com/maps/d/embed?mid=1ZK8aHJAQzBfL0C9Wpx0ITVr_A2W3LOs&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
         </div>
         <div class="content">
             <h2 class="ubicacion"><i class="fas fa-map-marker-alt"></i> Ubicacion de Agencia Siguatepeque</h2>
