--- a/Contactos.html
+++ b/Contactos.html
@@ -43,11 +43,11 @@
                             <li><a href="agencias.html">Agencias</a>
                                 <ul>
                                     <li><a href="danli.html">Danlí</a></li>
-                                    <li><a href="#">Comayagua</a></li>
-                                    <li><a href="#">Siguatepeque</a></li>
-                                    <li><a href="#">Intibucá</a></li>
-                                    <li><a href="#">El Paraíso</a></li>
-                                    <li><a href="#">Santa Rosa De Copán</a></li>
+                                    <li><a href="Comayagua.html">Comayagua</a></li>
+                                    <li><a href="Siguatepeque.html">Siguatepeque</a></li>
+                                    <li><a href="Intibuca.html">Intibucá</a></li>
+                                    <li><a href="ElParaiso.html">El Paraíso</a></li>
+                                    <li><a href="SantaRosa.html">Santa Rosa De Copán</a></li>
                                 </ul>
                             </li>
                             <li><a href="Contactos.html">Contacto </a></li>
