--- a/Valores.html
+++ b/Valores.html
@@ -43,11 +43,11 @@
                         <li><a href="agencias.html">Agencias</a>
                             <ul>
                                 <li><a href="danli.html">Danlí</a></li>
-                                <li><a href="#">Comayagua</a></li>
-                                <li><a href="#">Siguatepeque</a></li>
-                                <li><a href="#">Intibucá</a></li>
-                                <li><a href="#">El Paraíso</a></li>
-                                <li><a href="#">Santa Rosa De Copán</a></li>
+                                <li><a href="Comayagua.html">Comayagua</a></li>
+                                <li><a href="Siguatepeque.html">Siguatepeque</a></li>
+                                <li><a href="Intibuca.html">Intibucá</a></li>
+                                <li><a href="ElParaiso.html">El Paraíso</a></li>
+                                <li><a href="SantaRosa.html">Santa Rosa De Copán</a></li>
                             </ul>
                         </li>
                         <li><a href="Contactos.html">Contacto </a></li>
@@ -74,17 +74,14 @@
 
 
     <!--DONDE VAN COLOCADOS LOS VALORES-->
-    <section class="textos-header2">
-        <h2>VALORES</h2>
-    </section>
-
+  
     <section class="valores">
         <p>
-          Aquí en nuestra empresa, nos comprometemos a seguir principios cristianos, mantener un alto nivel de compromiso, actuar con honestidad y promover el trabajo en equipo en todas nuestras interacciones.
+            “Aquí en nuestra empresa, nos comprometemos a seguir principios cristianos, mantener un alto nivel de compromiso, <br> actuar con honestidad y promover el trabajo en equipo en todas nuestras interacciones”.
         </p>
         <div class="tarjetas">
           <div class="tarjeta">
-            <h3>Principios cristianos</h3>
+            <h3>Principios Cristianos</h3>
             <img src="img/VALORES/Principioscristianos.jpg" alt="Principios cristianos">
             <p>Valoramos la guía moral y ética proporcionada por los principios cristianos en nuestro trabajo diario.</p>
           </div>
